# hspec-experiment

./: Clean.hs  Examples.hs  Main.hs  PureAndSo.hs  Run.hs  Structure.hs  Tests.hs  hspec-experiment.cabal
